fix footer text:align after previous commit

--- a/trunk/www/css/style.css
+++ b/trunk/www/css/style.css
@@ -31,6 +31,7 @@ footer {
     color: #fefefe;
     font-size: 11px;
     margin: 0 auto;
+    text-align: center;
     width: 900px;
     height: 54px;
 }
